fixed unwanted horizontal scroll

--- a/style.css
+++ b/style.css
@@ -2,10 +2,6 @@
   font-family: "Proxima Nova", sans-serif;
 }
 
-html {
-  overflow: hidden;
-}
-
 body {
   margin: 0;
   -moz-user-select: none;
@@ -13,7 +9,6 @@ body {
   -ms-user-select:none;
   user-select:none;
   -o-user-select:none;
-  overflow: hidden;
 }
 
 /* PROPCARD.HTML */
@@ -251,7 +246,6 @@ body {
 .grey-footer > div {
   padding-top: 2vh;
   width: 100%;
-  padding-right: 1em;
 }
 
 .left-band {
